Fix overflow on modals

--- a/static/less/mixins/modal.less
+++ b/static/less/mixins/modal.less
@@ -10,6 +10,7 @@
     margin: 0 auto;
     padding: 0;
     width: 500px;
+    overflow: auto;
 
     // Ugly things go here:
 
